Add data Migration service+ enrolledDate in Update page fixed

--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -123,7 +123,9 @@
                           <input type="hidden" th:field="*{studentId}" />
                         </div>
 
-                        <div class="row g-3"></div>
+                        <div class="col-md-6"> </div>
+
+                        <!-- <div class="row g-3"></div> -->
                         <div class="col-md-6">
                           <label class="form-label required-label">なまえ（英語）</label>
                           <input type="text" class="form-control" th:field="*{studentName}" required />
@@ -264,8 +266,7 @@
                             <option value="宿泊">わからない</option>
                             <option value="その他">その他</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('desiredJobType')}"
-                            th:errors="*{desiredJobType}"></div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('desiredJobType')}" th:errors="*{desiredJobType}"></div>
                         </div>
 
                         <div class="col-md-6">
@@ -286,8 +287,7 @@
                             <option value="christian">キリスト教</option>
                             <option value="other">その他</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('religion')}" th:errors="*{religion}">
-                          </div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('religion')}" th:errors="*{religion}"></div>
                         </div>
 
                         <div class="col-md-6">
@@ -345,8 +345,7 @@
                             <option value="N2">N2</option>
                             <option value="N1">N1</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('passedHighestJLPTLevel')}"
-                            th:errors="*{passedHighestJLPTLevel}"></div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('passedHighestJLPTLevel')}" th:errors="*{passedHighestJLPTLevel}"></div>
                         </div>
                         <div></div>
 
@@ -379,7 +378,6 @@
                           </select>
                           <div class="text-danger" th:if="${#fields.hasErrors('hostelPreference')}" th:errors="*{hostelPreference}"></div>
                         </div>
-                        <div></div>
 
                         <div class="col-md-4">
                           <label class="form-label">お酒</label>
@@ -410,12 +408,11 @@
                           </select>
                           <div class="text-danger" th:if="${#fields.hasErrors('haveTatto')}" th:errors="*{haveTatto}"></div>
                         </div>
-                        <div></div>
 
                         <div class="col-md-4">
                           <label class="form-label required-label">学校登録日</label>
                           <input type="date" class="form-control" name="enrolledDate" th:value="${student.enrolledDate}" />
-                          <div class="text-danger" th:if="${#fields.hasErrors('enrolledDate')}"th:errors="*{enrolledDate}"></div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('enrolledDate')}" th:errors="*{enrolledDate}"></div>
                         </div>
 
                         <div class="col-md-4">
